--- a/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
+++ b/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
@@ -25,7 +25,11 @@
               'bg-danger': item.estado === 'VALIDADO'
             }">{{ item.estado }}</span>
           </td>
-          <td><i class="bi bi-eye-fill"></i></td>
+          <td><p-button
+            type="button"
+            icon="pi pi-eye"
+            styleClass="p-button-text"
+          ></p-button></td>
         </tr>
       </tbody>
     </table>
