--- a/src/app/Template/pg-login/pg-login.component.html
+++ b/src/app/Template/pg-login/pg-login.component.html
@@ -88,8 +88,8 @@
     
                       <div class="col-12 form-group" style="margin-top: -10px;">
                         <div class="form-check">
-                          <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                          <label class="form-check-label" for="rememberMe" style="font-size: 12px;">Recuerdame</label>
+                          <input class="form-check-input" type="checkbox" [(ngModel)]="remember" name="remember" value="true" id="remember">
+                          <label class="form-check-label" for="remember" style="font-size: 12px;">Recuerdame</label>
                         </div>
                       </div>
                       <div class="col-12" style="margin-top: -10px;">
