--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
@@ -44,6 +44,7 @@
           <li><a class="nav-link scrollto" href="#services">Puntos Verdes</a></li>
           <li><a class="nav-link   scrollto" href="#portfolio">Equipo</a></li>
           <li><a class="nav-link scrollto" href="#team">Informacion</a></li>
+          <!--
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -61,6 +62,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
+          -->
           <li><a class="nav-link scrollto" href="/login">Ingresar</a></li>
           <li><a class="getstarted scrollto" href="/registro">Regístrate!</a></li>
         </ul>
@@ -132,33 +134,31 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About Us</h2>
+          <h2>Acerca de Nosotros</h2>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              GreenPoint es una aplicación innovadora dedicada a promover el reciclaje y la sostenibilidad mediante un sistema de recompensas. Nos enfocamos en motivar a individuos y negocios a reciclar más, ofreciendo incentivos atractivos y fomentando un impacto positivo en el medio ambiente.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Ofrecemos puntos y recompensas por cada actividad de reciclaje registrada.</li>
+              <li><i class="ri-check-double-line"></i> Utilizamos la geolocalización para encontrar puntos verdes cercanos.</li>
+              <li><i class="ri-check-double-line"></i> Colaboramos con negocios locales para verificar y promover prácticas de reciclaje responsables.</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              En GreenPoint, creemos que cada pequeño esfuerzo cuenta. Nuestra misión es crear una comunidad comprometida con la reducción de residuos y la preservación del planeta. A través de nuestra plataforma, los usuarios pueden rastrear su impacto ambiental, aprender sobre prácticas sostenibles y unirse a eventos de reciclaje en su área.
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <a href="#" class="btn-learn-more">Aprende más</a>
           </div>
         </div>
 
       </div>
     </section><!-- End About Us Section -->
+
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us section-bg">
@@ -619,7 +619,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Contactos</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -630,22 +630,22 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Av. Canonigo Ramos, Ecuador, Riobamba, RB 535022</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>greenpoint7064@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+593 99 401 1067</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7976.300967811104!2d-78.68728592991832!3d-1.6567345488654948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d307c252930ed9%3A0x6ad1a526f47e5b0c!2sEscuela%20Superior%20Polit%C3%A9cnica%20de%20Chimborazo!5e0!3m2!1ses!2sec!4v1721087262514!5m2!1ses!2sec" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
@@ -714,7 +714,7 @@
               Riobamba, RB 535022<br>
               Ecuador <br><br>
               <strong>Teléfono:</strong> +593 99 401 1067<br>
-              <strong>Email:</strong> green.point@gmail.com<br>
+              <strong>Email:</strong> greenpoint7064@gmail.com<br>
             </p>
           </div>
 
