--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -53,6 +53,9 @@
                             <label for="tipo2" class="ml-2" style="font-size: 14px;">Negocio</label>
                         </div>
                       </div>
+                      <div class="col-12" style="margin-top: 5px; margin-bottom: -30px;" *ngIf="tipo === ''">
+                        <p class="small mb-0" style="font-size: 13px;">Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
+                      </div>
 
                     <form #ciudadanoform="ngForm" *ngIf="tipo === 'ciudadano'" (ngSubmit)="register(ciudadanoform)" class="row g-3 needs-validation" novalidate style="margin-top: -15px;">
                       <div class="col-12 form-group">
