--- a/src/app/Template/templateAdmin/dashboardadmin/dashboardadmin.component.html
+++ b/src/app/Template/templateAdmin/dashboardadmin/dashboardadmin.component.html
@@ -1,51 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>TestSimulador</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="gp.ico" />
-  </head>
+<html lang="es">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Dashboard - Administrador</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets2/img/favicon.png" rel="icon">
+  <link href="assets2/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Optionally, you can include Popper.js for tooltips and popovers 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>-->
+  <!-- Bootstrap JS 
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.min.js"></script>-->
+
+
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+
+</head>
 
   <body>
     <div class="contentenedor-principal">
       <app-headeradmin></app-headeradmin>
-      <div id="wrapper" class="main-container-app">
-        <app-menuadmin></app-menuadmin>
-        <div id="content-wrapper">
-          <router-outlet></router-outlet>
-          <app-spinner></app-spinner>
-        </div>
-      </div>
       <app-footeradmin></app-footeradmin>
     </div>
   </body>
 </html>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>BancoAlimentos-Caritas</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="gp.ico" />
-  </head>
-
-  <body>
-    <div class="layout-wrapper">
-      <app-headeradmin></app-headeradmin>
-      <div class="layout-sidebar">
-        <app-menuadmin></app-menuadmin>
-      </div>
-      <div class="layout-main-container">
-        <div class="layout-main">
-          <router-outlet></router-outlet>
-        </div>
-        <app-footeradmin></app-footeradmin>
-      </div>
-      <div class="layout-mask"></div>
-    </div>
-  </body>
-</html> -->
